--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.mental" >
+        xmlns:tools="http://schemas.android.com/tools"
+        package="com.example.mental">
 
     <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+            tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
-        android:icon="@drawable/ic_mental_theme"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Mental" >
+            android:background="@drawable/wallpaper"
+            android:icon="@drawable/ic_mental_theme"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Mental">
+        <activity android:name=".patientsTreatment"/>
+        <activity android:name=".consultDoctor"/>
+        <activity android:name=".patientsRecords" />
         <activity
-            android:name=".doctor"
-            android:label="@string/title_activity_doctor"
-            android:theme="@style/Theme.Mental.NoActionBar" />
+                android:name=".doctor"
+                android:label="@string/title_activity_doctor"
+                android:theme="@style/Theme.Mental.NoActionBar" />
         <activity android:name=".sign_up_doctor" />
-        <activity android:name=".patients" />
+        <activity android:name=".patients"
+                android:label="@string/title_activity_patient"
+                android:theme="@style/Theme.Mental.NoActionBar"/>
         <activity android:name=".signup" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+                android:name=".MainActivity"
+                android:exported="true"
+                android:theme="@style/Theme.Mental">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
